<resources>
    <string name="app_name">Jaribha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="do_you_want_to_logout">Do you want to LogOut?</string>
    <string name="all_fields_req">All fields are required.</string>
    <string name="internet">Please check your Internet connection and try again!</string>
    <string name="project_id">296580390064</string>
    <string name="login_cancel_fb">Login Cancel</string>
    <string name="login_error_fb">Login Error</string>
    <string name="select_no_community">Select No Community</string>
    <string name="successfully_login">Successfully Login</string>
    <string name="please_enter_email">Please enter email id.</string>
    <string name="email_already_exist_please_different_email">Email already exist. Please enter different email id.</string>
    <string name="required_information">Required Information</string>
    <string name="continue2">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_email">Invalid email id</string>
    <string name="invalid_email_or_password">This email address or password is invalid</string>
    <string name="invalid_password">This password is too short</string>
    <string name="field_required">This field is required</string>
    <string name="session_error">Session Expired</string>
    <string name="network">Network Connection</string>
    <string name="login_title">Login</string>
    <string name="logout">LogOut</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="select_lang">Select language</string>
    <string name="english">ENGLISH</string>
    <string name="arabic">ARABIC</string>
    <string name="forgot_pwd">"<u>Forgot password?</u>"</string>
    <string name="explore_as_guest">"<u>Explore as Guest</u>"</string>
    <string name="register_now">Register Now</string>
    <string name="remember_me">"&#009;Remember me"</string>
    <string name="skip">SKIP</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="newsletter">Newsletter (Update on new projects and successful project)</string>
    <string name="dont_have_account">Don\&apos;t have an account? Sign Up ></string>
    <string name="dont_have_account_new">Don\&apos;t have an account?</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="registeration_title">Registeration</string>
    <string name="register">Sign Up</string>
    <string name="register_success">Registered successfully</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="news_letter">Newsletter (Updates on new projects and successful projects.)</string>
    <string name="i_agree">I Agree to Jaribha\&apos;s Terms and conditions and Privacy policy.</string>
    <string name="i_agree_new">I Agree to Jaribha\&apos;s </string>
    <string name="terms">Terms and conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="and"> and</string>
    <string name="email_does_not_match">Email does not match</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="supported">"124%\nSupported"</string>
    <string name="and_char">"&amp;00,000"</string>
    <string name="goal">Goal</string>
    <string name="project_description">Description</string>
    <string name="community">Community</string>
    <string name="support_project">Support Project</string>
    <string name="support_sponser">Supporter &amp; Sponsor</string>
    <string name="support_amt">Support amount</string>
    <string name="day_to_go">Day to go </string>
    <string name="date">Date: </string>
    <string name="goal_amt">Goal amount</string>
    <string name="support">Support</string>
    <string name="deliver_estimated">Delivery Estimated</string>
    <string-array name="shipping">
        <item>Shipping Worldwide</item>
        <item>Shipping within "Local" only</item>
        <item>No shipping involved</item>
    </string-array>
    <string name="activity">Activity</string>
    <string name="created">Created</string>
    <string name="create_proj">Create Project</string>
    <string name="supported1">Supported</string>
    <string name="sponsored">Sponsored</string>
    <string name="favourite">Favourite</string>
    <string name="leave_comment">Leave a comment (for Supporter/Sponsors only)</string>
    <string name="fb_app_id">1620073134909455</string>
    <string name="once_you_update">"Once you submit your request to post a project, you will be classified as a Jaribha &#34;Creator&#34; by which you will have a maximum of 120-days timeframe to reach your Goal Amount (Project Period). You must set your Goal Amount and Project Period in advance. The Goal Amount and Project Period cannot be changed once your project has gone live. The project cannot be changed or edited once it has gone live, it can only be updated."</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="years">"&#009;years,&#009;<br />"</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="weeks">"&#009;weeks,&#009;<br />"</string>
    <string name="days1">"&#009;days,&#009;<br />"</string>
    <string name="hours">"&#009;hours,&#009;<br />"</string>
    <string name="minutes">"&#009;minutes,&#009;<br />"</string>
    <string name="seconds">"&#009;seconds ago&#009;<br />"</string>
    <string-array name="nav_drawer_items_top">
        <item>Home</item>
        <item>Browse Project</item>
        <item>Start Project</item>
        <item>How it Works?</item>
        <item>Help</item>
        <item>Portfolio</item>
        <item>Communities</item>
        <item>My History</item>
        <item>Messages</item>
        <item>Favourite</item>
    </string-array>
    <string-array name="nav_drawer_items_bottom">
        <item>Rewards</item>
        <item>Guidelines</item>
        <item>Terms and Conditions</item>
        <item>Privacy Policy</item>
        <item>Contact us</item>
        <item>Subscribe to Newsletter</item>
    </string-array>
    <string name="subscribe_to_newsletter">Subscribe to Newsletter</string>
    <string name="title_activity_login">Sign in</string>
    <string name="campaign_ended">Campaign Ended</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid">This email address or password is invalid</string>
    <string name="unable_to_get_data">Unable to get data, please check your internet connection.</string>
    <string name="select_community">Select Community</string>
    <string name="you_cant_sponsor">You can\'t sponsor a project that ended!</string>
    <string name="you_cant_ask">You can\'t ask a question to yourself!</string>
    <string name="you_cant_support">You can\'t support a project that ended!</string>
    <string name="spamming_me_desc">Project creators are not permitted to spam. This includes sending unsolicited mass emails and unsolicited messages on any social media platform.</string>
    <string name="this_is_desc">Jaribha is for projects that need supporting only. Projects must have a plan and a clear goal.</string>
    <string name="prohibited_rewards_desc">Raffles, discounts, coupons, financial returns and investment offers are prohibited. If you have any other reason why the reward is wrong please explain under comments.</string>
    <string name="action_sign_in_short">Login</string>
    <string name="go_back_to_login"><ul>Go Back to Login</ul></string>
    <string name="write_here">Write here</string>
    <string name="zero_div_by">0/200</string>
    <string name="if_you_had_to_describe_your">If you had to describe your project in one tweet, how would you do it?</string>
    <string name="as_a_default_each_project_is_automatically">As a default each project is automatically set at 120 days. Note : There is a 1–3 weeks processing time for distributing and processing the transaction after your project is successful. Please plan your projects accordingly.</string>
    <string name="send">Send</string>
    <string name="project_title">Project Title</string>
    <string name="project_location">Project Location</string>
    <string name="short_description">Short Description</string>
    <string name="upload_an_image_choose_an_image_from_your_phone">Upload an image\nChoose an image from your phone</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="save_and_next">Save &amp; Next</string>
    <string name="kicking_off_your_new_project">Kicking off your new project!</string>
    <string name="start_by_introducing_us_to_the_basics">Start by introducing us to the basics.</string>
    <string name="project_image">Project Image</string>
    <string name="select_category">Choose a project title that is simple, specific and memorable. If applicable, make sure you include the title or name of any relevant material related to your project.</string>
    <string name="category">Category</string>
    <string name="category_select">Select Category</string>
    <string name="project_period">Project Period</string>
    <string name="select_period">Select Period</string>
    <string name="project_goal_US_dollar">Project Goal (US Dollar)</string>
    <string name="your_project_goal_should_be_the_minimum_amount_needed">Your Project Goal should be the minimum amount needed to complete the project and fulfill all rewards. Remember, Jaribha is based on an all-or-nothing concept, which means you can always get more than your Project Goal but never less than the amount you\&apos;ve allocated for the completion of the project.\n\nIf your project is successfully supported, Jaribha will apply the Project Fee (see Terms and Conditions for more details). If you don\&apos;t meet your Project Goal on time, the amounts collected to date will be returned to the Supporters less any transaction fees (See Terms and Conditions for more details).\n\nRemember, there are many knowledgeable members in our community. Don\&apos;t underestimate their ability to determine whether your Goal Amount is realistic or not.\n\nTo ensure the community trusts the accuracy of your goal, ensure your project is well researched and always make sure you share as many details as you can on your project page.</string>
    <string name="pick_a_community_you_are_part_of">Pick a community you are part of or associated with. Being under a community will help give more exposure to your project through the community\&apos;s network. Only pick a community you are part of, if you are not part of a community leave it as Select No Community.\nSee all jaribha (Communities).</string>
    <string name="search">Search</string>
    <string name="search_projects">Search Projects</string>
</resources>