<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_green"
    android:orientation="vertical">

    <include layout="@layout/action_bar1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value40"
        android:orientation="vertical">

        <com.jaribha.customviews.fonts.FontEditText
            android:id="@+id/edt_reg_email"
            style="@style/Widget.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value10"
            android:background="@null"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="@dimen/value10"
            android:drawableStart="@drawable/email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/value10"
            android:paddingLeft="@dimen/value30"
            android:paddingRight="@dimen/value30"
            android:textCursorDrawable="@drawable/cursor_white"
            app:font="Lato-Regular.ttf" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7BD2D9" />

        <com.jaribha.customviews.fonts.FontButton
            android:id="@+id/sendBtn"
            style="@style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/value5"
            android:layout_marginLeft="@dimen/value30"
            android:layout_marginRight="@dimen/value30"
            android:layout_marginTop="@dimen/value30"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:font="Lato-Regular.ttf" />

        <com.jaribha.customviews.fonts.FontTextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/value10"
            android:text="@string/go_back_to_login"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            app:font="Lato-Regular.ttf" />

    </LinearLayout>

</LinearLayout>
